# shot-url

./: .dockerignore  .env.example  .gitignore  README.md  config.py  main.py  package-lock.json  package.json  pyproject.toml  requirement.txt  urls.sqlite
app/: __init__.py  db.py  exts.py  form.py  schema.py  utils.py
app/model/: __init__.py  url.py  user.py
app/static/: output.css  styles.css
app/templates/: base.html  createUrl.html  dashbord.html  index.html  login.html  sign.html
app/view/: __init__.py  auth.py  main.py  urlView.py
migrations/versions/: 369a321b1db0_.py  e1f684145c6e_.py
