[project]
name = "shot-url"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apiflask>=3.1.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-jwt-extended>=4.7.4",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
]
